static/terraboard.css
@media (max-width:767px) {
  .navbar-toggle {
    float: left;
  }

  .navbar-right {
    position: absolute;
    top: 0;
    right: 20px;
  }

  .breadcrumb {
    display: none;
  }

  h2.node-title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

@media (min-width: 992px) {
  body, html, #mainrow, #leftcol {
    margin: 0;
    height:100%;
  }
  .container{
      width: 80vw;
  }
  #maincont, #leftcol .panel-group {
    overflow: hidden;
  }
  #nodes, #node {
    overflow-y: auto;
  }
  #nodes {
    max-height: calc(100% - 200px);
  }
  #node {
    height: 100%;
  }
  #states-select {
      margin: 10px;
  }
  #states-select a {
      color: black;
  }
}

body { padding-top: 60px; }
#chart {
  height: 310px;
}
#chart svg {
  margin-left: calc((100% - 310px)/2);
}
#chart svg g path, #chart svg g g, #nodeslist li, .panel-title a, .ack, .star,
  .resource-title, .resource-title ~ pre {
  cursor: pointer;
}
#chart > div {
  margin-top: calc(350px / 2);
}
#nodeslist .list-group-item .resource:hover,
#only-in-old .list-group-item:hover,
#only-in-new .list-group-item:hover {
  background-color: #d9edf7;
  background-image: none;
  color: #337ab7;
}
#nodeslist .list-group-item.selected {
  background-color: #d9edf7;
  color: #337ab7;
}
#nodeslist .list-group-item .resource.selected {
  background-color: #d9edf7;
  color: #337ab7;
}
#nodeslist .list-group-item .glyphicon-star, .panel-title .glyphicon-star {
  float: right;
  color: orange;
  display: none;
}
#nodeslist .list-group-item.starred .glyphicon-star, .panel-title.starred .glyphicon-star {
  display: block;
}
#node .list-group {
  padding: 0 10px 0 10px;
}
#node .list-group.active {
  border-left: solid #4D90F0;
  padding-left: 7px;
}
.compile-error {
  color: red;
  font-weight: bold;
  white-space: normal;
}
.panel-title .badge {
  float: right;
  margin-right: 10px;
}
.back-to-top {
  position: fixed;
  top: 10px;
  left: 70px;
  display: none;
  height: 30px;
  z-index: 99999;
  cursor: pointer;
}
#node .diff-stats .progress {
  text-align: center;
  width: 5em;
  display: inline;
  float: right;
}
#nodeslist .node-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#nodeslist .progress {
  text-align: center;
  display: inline;
  float: right;
  margin-left: 5px;
}
.btn-file {
  position: relative;
  overflow: hidden;
}
.btn-file input[type=file] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  filter: alpha(opacity=0);
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}
.btn-checkbox {
  top: -2px;
  color: #777;
  padding: 15px 0 15px 20px;
}
#nodeslist .progress-bar {
  text-indent: -9999px; // Hide text to the left
}
#nodeslist .progress-bar:hover {
  text-indent: 0;  // Reveal text
}
#nodeslist .progress-bar {
  float: right;
}
pre.sh_sourceCode .sh_oldfile {
  color: red !important;
}
.resource-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.resource-title:hover {
  text-overflow: clip;
  overflow: auto;
}
.navbar-brand {
  padding: 0;
}
.navbar-brand img {
  height: 50px;
}
#pages {
    margin: 0 auto;
    width: 30vh;
}
#navigate span {
  cursor: pointer;
}
.overview-chart {
  text-align: center;
}
.jqstooltip {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
  box-sizing: content-box;
}
.form-inline .ui-select-container .ui-select-toggle,
.form-inline .ui-select-container .ui-select-search {
  width: 100%;
}
.ui-select-match-text{
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 40px;
}
.ui-select-toggle > .btn.btn-link {
  margin-right: 10px;
  top: 6px;
  position: absolute;
  right: 10px;
}


/*
 * Node attribute table
 */
#node {
    overflow-x: hidden;
}

#node td.attr-val {
    white-space: pre;
    text-overflow: ellipsis;
    max-width: 30vw;
    overflow: hidden;
}
#node td:hover {
    text-overflow: clip;
    overflow: auto;
}

